--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-    <link type="text/css" rel="stylesheet" href="Feedback.css">
+    <link type="text/css" rel="stylesheet" href="feed.css">
 </head>
 <bodY>
     <h1 class="book">Feedback Form</h1>
